force-app/main/default/objects/vlocity_ps__OpportunityLineItemRelationship__c/fields/vlocity_ps__OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__OpportunityId__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Product Relationship</relationshipLabel>
    <relationshipName>OpportunityLineItemRelationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>