force-app/main/default/objects/vlocity_ps__OpportunityLineItemRelationship__c/fields/vlocity_ps__RelatedAssetReferenceId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__RelatedAssetReferenceId__c</fullName>
    <description>Identifies the Asset Reference Id of an item or asset that this item is related to. Used instead of RelatedOpportunityLineItemId__c when the related asset is not a line item in this opportunity.</description>
    <externalId>true</externalId>
    <label>Related Asset Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>