force-app/main/default/objects/vlocity_ps__OpportunityLineItemRelationship__c/fields/vlocity_ps__RelationshipType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__RelationshipType__c</fullName>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Reassignment</fullName>
            </value>
            <value>
                <fullName>Movement</fullName>
            </value>
            <value>
                <fullName>ReliesOn</fullName>
                <label>Relies On</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>